--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
