--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 .App {
   background-image: url("./images/Background.png");
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: cover;
   width: 100vw;
-  height: 100vh;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
