--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -3,6 +3,7 @@
     align-items: center;
     align-self: center;
     text-align: center;
+    height: 100vh;
 }
 
 .IntroText {
@@ -20,3 +21,14 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.WebTitle {
+    text-align: center;
+    align-self: center;
+    font-size: 40px;
+    
+}
+
+.TitleDiv {
+    margin-bottom: 10vh;
+}   
