--- a/src/components/SignUpPage.css
+++ b/src/components/SignUpPage.css
@@ -3,12 +3,13 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: end;
+    height: 100vh;
 }
 
 .QuestionBar {
     display: flex;
     flex-direction: column;
-    margin-top: 10%;
+    margin-top: 2vh;
     text-align: center;
     align-self: center;
     width: 25%;
