--- a/src/components/SearchResult.css
+++ b/src/components/SearchResult.css
@@ -14,6 +14,7 @@
 
 .profile {
     margin-left:1%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .profileButtons {
@@ -28,4 +29,8 @@
 
 .description {
     margin-right: 10%;
+}
+
+.profilelink {
+    color:white;
 }
