Add edit and delete post

--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -36,12 +36,12 @@
     margin-bottom: 10vh;
 }
 
-html {
+.html {
   position: relative;
   min-height: 100%;
   max-width: 100%;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  /* overflow-x: hidden;
+  overflow-y: hidden; */
 }
 
 body {
